--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ html, body, div, svg, image, img {
   --color-a: purple;
   --color-s: green;
   --color-l: yellow;
+  --color-l: pale yellow;
 }
 
 html, body {
