--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ html, body, div, svg, image, img {
   --color-a: purple;
   --color-s: green;
   --color-l: yellow;
-  --color-l: pale yellow;
+  --color-il: pale yellow;
 }
 
 html, body {
